--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "tsconfig.json", "index.ts"]
 }
